--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-button {
-    width: 3rem;
-    height: 3rem;
+html {
+  background-color: black;
+  display: flex;
+  justify-content: center;
 }
+
+button {
+  width: 8rem;
+  height: 8rem;
+  margin: auto;
+}
+
+.square {
+  position: relative;
+  top: 50%;
+  padding: auto;
+  width: 24rem;
+  height: 24rem;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: rgb(0, 0, 0);
+  text-align: center;
+  grid-gap: none;
+}
+.square .tl {
+  border: none;
+  background-color: red;
+}/*# sourceMappingURL=style.css.map */
